# mkdocs-coverage

./: .copier-answers.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  README.md  duties.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
config/: coverage.ini  flake8.ini  mypy.ini  ruff.toml
contributing/: index.html
coverage/: covindex.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_plugin_py.html  d_caf4976fc0fb4ad9_loggers_py.html  d_caf4976fc0fb4ad9_plugin_py.html  index.html  src_mkdocs_coverage_loggers_py.html  src_mkdocs_coverage_plugin_py.html  status.json  tests_conftest_py.html  tests_test_plugin_py.html
credits/: index.html
docs/: gen_ref_nav.py  schema.json
docs/reference/: cli.md  loggers.md  plugin.md
license/: index.html
reference/: SUMMARY.txt
reference/SUMMARY/: index.html
reference/cli/: index.html
reference/loggers/: index.html
reference/mkdocs_coverage/: index.html
reference/mkdocs_coverage/loggers/: index.html
reference/mkdocs_coverage/plugin/: index.html
reference/plugin/: index.html
search/: search_index.json
src/mkdocs_coverage/: __init__.py  __main__.py  cli.py  debug.py  loggers.py  plugin.py
tests/: __init__.py  test_cli.py  test_plugin.py
