[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "mkdocs-coverage"
version = {use_scm = true}
description = "MkDocs plugin to integrate your coverage HTML report into your site."
authors = [{name = "Timothée Mazzucotelli", email = "pawamoy@pm.me"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6.1"
dynamic = ["version", "classifiers"]
classifiers = ["Development Status :: 4 - Beta"]
dependencies = [
    "mkdocs~=1.1",
]

[project.urls]
Repository = "https://github.com/pawamoy/mkdocs-coverage"
Homepage = "https://github.com/pawamoy/mkdocs-coverage"

[tool.pdm]
package-dir = "src"

[project.entry-points."mkdocs.plugins"]
coverage = "mkdocs_coverage.plugin:MkDocsCoveragePlugin"

[tool.pdm.dev-dependencies]
duty = ["duty~=0.6"]
docs = [
    "mkdocs-macros-plugin~=0.5",
    "mkdocs-material~=7.1",
    "mkdocstrings~=0.15",
    "toml~=0.10",
]
format = [
    "autoflake~=1.4",
    "black~=20.8b1",
    "isort~=5.8",
]
maintain = [
    # TODO: remove this section when git-changelog is more powerful
    "git-changelog~=0.4",
]
quality = [
    "darglint~=1.7",
    "flake8-bandit~=2.1",
    "flake8-black~=0.2",
    "flake8-bugbear~=21.3",
    "flake8-builtins~=1.5",
    "flake8-comprehensions~=3.4",
    "flake8-docstrings~=1.6",
    "flake8-pytest-style~=1.4",
    "flake8-string-format~=0.3",
    "flake8-tidy-imports~=4.2",
    "flake8-variables-names~=0.0",
    "pep8-naming~=0.11",
    "wps-light~=0.15",
]
tests = [
    "pytest~=6.2",
    "pytest-cov~=2.11",
    "pytest-randomly~=3.6",
    "pytest-sugar~=0.9",
    "pytest-xdist~=2.2",
]
typing = ["mypy~=0.812"]

[tool.black]
line-length = 120
exclude = "tests/fixtures"

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "mkdocs_coverage"
include_trailing_comma = true
