[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "mkdocs-coverage"
description = "MkDocs plugin to integrate your coverage HTML report into your site."
authors = [{name = "Timothée Mazzucotelli", email = "pawamoy@pm.me"}]
license = "ISC"
readme = "README.md"
requires-python = ">=3.7"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "mkdocs>=1.2",
]

[project.urls]
Homepage = "https://pawamoy.github.io/mkdocs-coverage"
Documentation = "https://pawamoy.github.io/mkdocs-coverage"
Changelog = "https://pawamoy.github.io/mkdocs-coverage/changelog"
Repository = "https://github.com/pawamoy/mkdocs-coverage"
Issues = "https://github.com/pawamoy/mkdocs-coverage/issues"
Discussions = "https://github.com/pawamoy/mkdocs-coverage/discussions"
Gitter = "https://gitter.im/mkdocs-coverage/community"
Funding = "https://github.com/sponsors/pawamoy"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[project.entry-points."mkdocs.plugins"]
coverage = "mkdocs_coverage.plugin:MkDocsCoveragePlugin"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.8"]
docs = [
    "black>=23.1",
    "mkdocs>=1.3",
    "mkdocs-gen-files>=0.3",
    "mkdocs-literate-nav>=0.4",
    "mkdocs-material>=7.3",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.18",
    "markdown-callouts>=0.2",
    "markdown-exec>=0.5",
    "toml>=0.10",
]
maintain = [
    "black>=23.1",
    "blacken-docs>=1.13",
    "git-changelog>=1.0",
]
quality = [
    "ruff>=0.0.246",
]
tests = [
    "pytest>=6.2",
    "pytest-cov>=3.0",
    "pytest-randomly>=3.10",
    "pytest-xdist>=2.4",
]
typing = [
    "mypy>=0.910",
    "types-markdown>=3.3",
    "types-toml>=0.10",
]
security = ["safety>=2"]
