[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mkdocs-coverage"
description = "MkDocs plugin to integrate your coverage HTML report into your site."
authors = [{name = "Timothée Mazzucotelli", email = "pawamoy@pm.me"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "mkdocs>=1.2",
]

[project.urls]
Homepage = "https://pawamoy.github.io/mkdocs-coverage"
Documentation = "https://pawamoy.github.io/mkdocs-coverage"
Changelog = "https://pawamoy.github.io/mkdocs-coverage/changelog"
Repository = "https://github.com/pawamoy/mkdocs-coverage"
Issues = "https://github.com/pawamoy/mkdocs-coverage/issues"
Discussions = "https://github.com/pawamoy/mkdocs-coverage/discussions"
Gitter = "https://gitter.im/mkdocs-coverage/community"
Funding = "https://github.com/sponsors/pawamoy"

[tool.pdm]
version = {source = "scm"}
plugins = [
    "pdm-multirun",
]

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[project.entry-points."mkdocs.plugins"]
coverage = "mkdocs_coverage.plugin:MkDocsCoveragePlugin"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.10"]
ci-quality = ["mkdocs-coverage[duty,docs,quality,typing,security]"]
ci-tests = ["mkdocs-coverage[duty,tests]"]
docs = [
    "black>=23.9",
    "markdown-callouts>=0.3",
    "markdown-exec>=1.7",
    "mkdocs>=1.5",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-committers-plugin-2>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.4",
    "mkdocs-minify-plugin>=0.7",
    "mkdocstrings[python]>=0.23",
    "tomli>=2.0; python_version < '3.11'",
]
maintain = [
    "black>=23.9",
    "blacken-docs>=1.16",
    "git-changelog>=2.3",
]
quality = [
    "ruff>=0.0",
]
tests = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.3",
]
typing = [
    "mypy>=1.5",
    "types-markdown>=3.5",
    "types-pyyaml>=6.0",
]
security = [
    "safety>=2.3",
]
